@@ -1,4 +1,5 @@
-package pe.edu.upeu.epp.config;
+package pe.edu.upeu.epp.security;
+
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -20,130 +21,97 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import pe.edu.upeu.epp.security.JwtAuthenticationFilter;
+
 import java.util.Arrays;
 import java.util.List;
-/**
 
- Configuración de seguridad de Spring Security.
- Define la cadena de filtros, autenticación JWT, CORS y autorizaciones por rol.
+/**
+ * Configuración de seguridad.
+ *
+ * Sprint 4b:
+ *   El producto es de uso exclusivo para personal SST.
+ *   Los roles activos son: SUPERVISOR_SST (principal) y ADMINISTRADOR_SISTEMA (legacy/compatibilidad).
+ *   Todos los endpoints de gestión son accesibles para ambos roles sin distinción,
+ *   ya que el supervisor SST tiene acceso completo al sistema.
+ *
+ *   Roles eliminados del alcance MVP: JEFE_AREA, COORDINADOR_SST.
  */
 @Configuration
 @EnableWebSecurity
-@EnableMethodSecurity // Habilita @PreAuthorize, @Secured, etc.
+@EnableMethodSecurity
 @RequiredArgsConstructor
 public class SecurityConfig {
+
     private final JwtAuthenticationFilter jwtAuthFilter;
     private final UserDetailsService userDetailsService;
-    /**
 
-     Configura la cadena de filtros de seguridad.
-     */
+    // Roles activos en el MVP
+    private static final String SUPERVISOR = "SUPERVISOR_SST";
+    private static final String ADMIN      = "ADMINISTRADOR_SISTEMA";
+
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-// Deshabilitar CSRF (no necesario para APIs stateless con JWT)
-                .csrf(AbstractHttpConfigurer::disable)
-                // Configurar CORS
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .csrf(AbstractHttpConfigurer::disable)
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .authorizeHttpRequests(auth -> auth
 
-                // Configurar autorización de endpoints
-                .authorizeHttpRequests(auth -> auth
-                        // Endpoints públicos (sin autenticación)
-                        .requestMatchers("/api/v1/auth/**").permitAll()
-                        .requestMatchers("/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
-                        .requestMatchers("/actuator/health").permitAll()
+                // ── Público ─────────────────────────────────────────────
+                .requestMatchers("/api/v1/auth/**").permitAll()
+                .requestMatchers("/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
+                .requestMatchers("/actuator/health").permitAll()
+                .requestMatchers("/api/v1/test-azure/**").permitAll()
+                .requestMatchers("/api/v1/reportes/trabajadores/*/ficha/pdf").permitAll()
 
-                        // Endpoints de administración (solo ADMINISTRADOR_SISTEMA)
-                        .requestMatchers("/api/v1/admin/**").hasRole("ADMINISTRADOR_SISTEMA")
-                        .requestMatchers(HttpMethod.POST, "/api/v1/catalogo-epp/**").hasRole("ADMINISTRADOR_SISTEMA")
-                        .requestMatchers(HttpMethod.PUT, "/api/v1/catalogo-epp/**").hasRole("ADMINISTRADOR_SISTEMA")
-                        .requestMatchers(HttpMethod.DELETE, "/api/v1/catalogo-epp/**").hasRole("ADMINISTRADOR_SISTEMA")
+                // ── Todo lo demás: requiere SUPERVISOR_SST o ADMINISTRADOR_SISTEMA ─
+                // Se usa una sola regla global para evitar inconsistencias.
+                // El @PreAuthorize en cada método puede añadir restricciones adicionales si fuera necesario.
+                .anyRequest().hasAnyRole(SUPERVISOR, ADMIN)
+            )
+            .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .authenticationProvider(authenticationProvider())
+            .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
-                        // Endpoints de gestión de inventario central
-                        .requestMatchers("/api/v1/inventario-central/**").hasAnyRole("SUPERVISOR_SST", "ADMINISTRADOR_SISTEMA")
-
-                        // Endpoints de entregas (JEFE_AREA y SUPERVISOR_SST)
-                        .requestMatchers(HttpMethod.POST, "/api/v1/entregas/**").hasAnyRole("JEFE_AREA", "SUPERVISOR_SST")
-                        .requestMatchers(HttpMethod.GET, "/api/v1/entregas/**").hasAnyRole("JEFE_AREA", "SUPERVISOR_SST", "COORDINADOR_SST")
-
-                        // Endpoints de solicitudes de reposición
-                        .requestMatchers(HttpMethod.POST, "/api/v1/solicitudes-reposicion").hasRole("JEFE_AREA")
-                        .requestMatchers(HttpMethod.PUT, "/api/v1/solicitudes-reposicion/*/aprobar").hasRole("SUPERVISOR_SST")
-                        .requestMatchers(HttpMethod.PUT, "/api/v1/solicitudes-reposicion/*/rechazar").hasRole("SUPERVISOR_SST")
-                        .requestMatchers(HttpMethod.GET, "/api/v1/solicitudes-reposicion/**").hasAnyRole("JEFE_AREA", "SUPERVISOR_SST", "COORDINADOR_SST")
-
-                        // Endpoints de reportes (accesibles para roles con permisos de lectura)
-                        .requestMatchers("/api/v1/reportes/**").hasAnyRole("SUPERVISOR_SST", "COORDINADOR_SST", "ADMINISTRADOR_SISTEMA")
-
-                        // Todos los demás endpoints requieren autenticación
-                        .anyRequest().authenticated()
-                )
-
-                // Configurar gestión de sesiones (stateless para JWT)
-                .sessionManagement(session ->
-                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                )
-
-                // Agregar el filtro JWT antes del filtro de autenticación de usuario/contraseña
-                .authenticationProvider(authenticationProvider())
-                .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
         return http.build();
     }
 
-    /**
-
-     Proveedor de autenticación que usa UserDetailsService y PasswordEncoder.
-     */
     @Bean
     public AuthenticationProvider authenticationProvider() {
-        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
-        authProvider.setUserDetailsService(userDetailsService);
-        authProvider.setPasswordEncoder(passwordEncoder());
-        return authProvider;
+        DaoAuthenticationProvider p = new DaoAuthenticationProvider();
+        p.setUserDetailsService(userDetailsService);
+        p.setPasswordEncoder(passwordEncoder());
+        return p;
     }
 
-    /**
-
-     AuthenticationManager para autenticación manual (usado en login).
-     */
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
         return config.getAuthenticationManager();
     }
 
-    /**
-
-     Encoder de contraseñas BCrypt.
-     */
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
-    /**
-
-     Configuración de CORS.
-     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-// Orígenes permitidos (ajustar según ambiente)
-        configuration.setAllowedOrigins(Arrays.asList(
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowedOrigins(Arrays.asList(
                 "http://localhost:3000",
                 "http://localhost:5354",
-                "https://app.upeu.edu.pe"
+                "http://localhost:5000",
+                "https://app.upeu.edu.pe",
+                "http://10.0.2.2:8080",
+                "http://172.17.25.28:8080"
         ));
-// Métodos HTTP permitidos
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-// Headers permitidos
-        configuration.setAllowedHeaders(List.of("*"));
-// Permitir credenciales (cookies, headers de autorización)
-        configuration.setAllowCredentials(true);
-// Tiempo de cache de la configuración CORS (1 hora)
-        configuration.setMaxAge(3600L);
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("*"));
+        config.setExposedHeaders(Arrays.asList("Content-Disposition"));
+        config.setAllowCredentials(true);
+        config.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", config);
         return source;
     }
 }
